Imported Upstream version 1.2.4

--- a/templates/provisioners/chef_client/client.erb
+++ b/templates/provisioners/chef_client/client.erb
@@ -30,3 +30,7 @@ no_proxy <%= no_proxy.inspect %>
 pid_file           "/var/run/chef/chef-client.pid"
 
 Mixlib::Log::Formatter.show_time = true
+
+<% if custom_configuration -%>
+load "<%= custom_configuration %>"
+<% end -%>
