--- a/templates/nfs/exports_freebsd.erb
+++ b/templates/nfs/exports_freebsd.erb
@@ -1,5 +1,5 @@
 # VAGRANT-BEGIN: <%= uuid %>
-<% folders.each do |name, opts| %>
-<%= opts[:hostpath] %> <%= ip %><% if opts[:map_uid] -%> -alldirs -mapall=<%= [opts[:map_uid],opts[:map_gid]].compact.join(":") %><% end -%>
+<% folders.each do |dirs, opts| %>
+<%= dirs.map { |d| "\"#{d}\"" }.join(" ") %> <%= ip %><% if opts[:map_uid] -%> -alldirs -mapall=<%= [opts[:map_uid],opts[:map_gid]].compact.join(":") %><% end -%>
 <% end %>
 # VAGRANT-END: <%= uuid %>
